# django-views

./: README.md  manage.py  pyproject.toml  requirements.txt
djangoviews/: asgi.py  settings.py  urls.py  wsgi.py
exemplo1/: apps.py  tests.py
